--- a/package.json
+++ b/package.json
@@ -17,13 +17,21 @@
     "clean": "turbo run clean"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.24.1",
-    "@typescript-eslint/parser": "^8.24.1",
-    "eslint": "^9.21.0",
-    "eslint-config-prettier": "^10.0.1",
-    "prettier": "^3.5.2",
-    "typescript-eslint": "^8.24.1",
-    "turbo": "^2.4.4",
-    "typescript": "^5.8.2"
+    "@next/eslint-plugin-next": "^15.5.12",
+    "@typescript-eslint/eslint-plugin": "^8.55.0",
+    "@typescript-eslint/parser": "^8.55.0",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "prettier": "^3.8.1",
+    "turbo": "^2.8.9",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.55.0"
+  },
+  "pnpm": {
+    "allowedDeprecatedVersions": {
+      "glob": "*",
+      "inflight": "*",
+      "rimraf": "*"
+    }
   }
 }
