perf: slim installs and optimize runtime/docker workflows

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "pnpm prisma:generate && nest start --watch",
-    "build": "pnpm prisma:generate && nest build",
+    "dev": "pnpm prisma:ensure && nest start --watch",
+    "build": "pnpm prisma:ensure && nest build",
     "start": "node dist/main.js",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
-    "typecheck": "pnpm prisma:generate && tsc --noEmit",
+    "typecheck": "pnpm prisma:ensure && tsc --noEmit",
     "test": "vitest run",
     "format": "prettier --check \"src/**/*.{ts,tsx,json}\" prisma/schema.prisma",
     "clean": "rm -rf dist",
+    "prisma:ensure": "sh ./scripts/ensure-prisma-client.sh",
     "prisma:generate": "XDG_CACHE_HOME=../../.cache prisma generate",
     "prisma:migrate": "XDG_CACHE_HOME=../../.cache prisma migrate dev",
     "prisma:studio": "XDG_CACHE_HOME=../../.cache prisma studio",
