--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -2,13 +2,14 @@ FROM node:20-bookworm-slim
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
   git \
-  openssh-client \
   ca-certificates \
   && rm -rf /var/lib/apt/lists/*
 
 ENV PNPM_HOME=/pnpm
 ENV PATH=$PNPM_HOME:$PATH
+ENV PNPM_STORE_PATH=/pnpm/store
 
-RUN corepack enable && pnpm config set store-dir /pnpm/store
+RUN corepack enable && corepack prepare pnpm@9.12.3 --activate \
+  && pnpm config set store-dir /pnpm/store
 
 WORKDIR /workspace
