--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -3,17 +3,15 @@ FROM node:20-bookworm-slim AS base
 ENV PNPM_HOME=/pnpm
 ENV PATH=$PNPM_HOME:$PATH
 
-RUN corepack enable && pnpm config set store-dir /pnpm/store
+RUN corepack enable && corepack prepare pnpm@9.12.3 --activate && pnpm config set store-dir /pnpm/store
 WORKDIR /app
 
-FROM base AS deps
-COPY package.json pnpm-workspace.yaml turbo.json tsconfig.base.json ./
+FROM base AS build
+COPY package.json pnpm-lock.yaml pnpm-workspace.yaml turbo.json tsconfig.base.json ./
 COPY apps/web/package.json ./apps/web/package.json
 COPY packages/core/package.json ./packages/core/package.json
 COPY packages/ui/package.json ./packages/ui/package.json
-RUN pnpm install --filter @veevalve/web... --frozen-lockfile=false
-
-FROM deps AS build
+RUN pnpm install --filter @veevalve/web... --frozen-lockfile
 COPY . .
 RUN pnpm --filter @veevalve/core build
 RUN pnpm --filter @veevalve/ui build
@@ -22,10 +20,9 @@ RUN pnpm --filter @veevalve/web build
 FROM node:20-bookworm-slim AS runtime
 WORKDIR /app
 ENV NODE_ENV=production
-COPY --from=build /app/apps/web/.next ./.next
-COPY --from=build /app/apps/web/public ./public
-COPY --from=build /app/apps/web/package.json ./package.json
-COPY --from=build /app/apps/web/next.config.ts ./next.config.ts
-COPY --from=build /app/node_modules ./node_modules
+ENV NEXT_TELEMETRY_DISABLED=1
+COPY --from=build /app/apps/web/.next/standalone ./
+COPY --from=build /app/apps/web/.next/static ./apps/web/.next/static
+COPY --from=build /app/apps/web/public ./apps/web/public
 EXPOSE 3000
-CMD ["node_modules/.bin/next", "start", "-p", "3000"]
+CMD ["node", "apps/web/server.js"]
