--- a/package.json
+++ b/package.json
@@ -18,10 +18,8 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.5.12",
-    "@typescript-eslint/eslint-plugin": "^8.55.0",
-    "@typescript-eslint/parser": "^8.55.0",
+    "@eslint/js": "^9.39.1",
     "eslint": "^9.39.2",
-    "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.8.1",
     "turbo": "^2.8.9",
     "typescript": "^5.9.3",
@@ -32,6 +30,12 @@
       "glob": "*",
       "inflight": "*",
       "rimraf": "*"
+    },
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "react-native",
+        "react-dom"
+      ]
     }
   }
 }
