--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -28,8 +28,17 @@
     "react-dom": "^19.0.0",
     "react-native": "*"
   },
+  "peerDependenciesMeta": {
+    "react-dom": {
+      "optional": true
+    },
+    "react-native": {
+      "optional": true
+    }
+  },
   "devDependencies": {
     "@types/react": "^19.2.14",
+    "react-native": "0.79.0",
     "tailwindcss": "^3.4.19",
     "tsup": "^8.5.1",
     "vitest": "^3.2.4"
