feat: normalize water quality ingestion and stabilize docker dev stack

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,12 @@ NODE_ENV=development
 # API
 PORT=3001
 DATABASE_URL=postgresql://veevalve:veevalve@localhost:5432/veevalve?schema=public
-TERVISEAMET_XML_URL=https://vtiav.sm.ee/index.php/?active_tab_id=A
+TERVISEAMET_POOL_FACILITIES_URL=https://vtiav.sm.ee/index.php/opendata/ujulad.xml
+TERVISEAMET_POOL_LOCATIONS_URL=https://vtiav.sm.ee/index.php/opendata/basseinid.xml
+TERVISEAMET_BEACH_LOCATIONS_URL=https://vtiav.sm.ee/index.php/opendata/supluskohad.xml
+TERVISEAMET_POOL_SAMPLES_URL_TEMPLATE=https://vtiav.sm.ee/index.php/opendata/basseini_veeproovid_{year}.xml
+TERVISEAMET_BEACH_SAMPLES_URL_TEMPLATE=https://vtiav.sm.ee/index.php/opendata/supluskoha_veeproovid_{year}.xml
+TERVISEAMET_SAMPLE_YEARS_BACK=1
 CORS_ORIGIN=http://localhost:3000
 
 # Web
