--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -12,7 +12,9 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "outDir": "./dist",
-    "types": ["node"]
+    "types": ["node"],
+    "baseUrl": ".",
+    "paths": {}
   },
   "include": ["src", "test"]
 }
