--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -5,6 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "dev": "expo start --clear",
+    "dev:docker": "expo start --clear --host lan --port 8081",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
@@ -15,19 +16,22 @@
     "clean": "rm -rf .expo dist"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.5",
     "@veevalve/core": "workspace:*",
     "@veevalve/ui": "workspace:*",
     "expo": "~53.0.27",
-    "expo-location": "~18.0.10",
+    "expo-location": "~18.1.6",
     "expo-notifications": "~0.31.5",
-    "expo-status-bar": "~2.0.1",
+    "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.0",
-    "react-native-safe-area-context": "4.12.0"
+    "react-dom": "19.0.0",
+    "react-native": "0.79.6",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
-    "@types/react": "^19.2.14",
-    "babel-preset-expo": "^13.2.5",
+    "@types/react": "~19.0.10",
+    "babel-preset-expo": "~13.0.0",
     "vitest": "^3.2.4"
   }
 }
