feat: improve cross-platform search and fuzzy matching

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ TERVISEAMET_SAMPLE_YEARS_BACK=1
 CORS_ORIGIN=http://localhost:3000
 
 # Web
+API_BASE_URL=http://localhost:3001/api
 NEXT_PUBLIC_API_BASE_URL=http://localhost:3001/api
 
 # Mobile / Expo
