--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,6 +82,7 @@ services:
     command: >-
       sh -lc "pnpm --filter @veevalve/web dev:docker"
     environment:
+      API_BASE_URL: http://api:3001/api
       NEXT_PUBLIC_API_BASE_URL: http://localhost:3001/api
     ports:
       - '3000:3000'
