--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,14 @@ TERVISEAMET_BEACH_LOCATIONS_URL=https://vtiav.sm.ee/index.php/opendata/supluskoh
 TERVISEAMET_POOL_SAMPLES_URL_TEMPLATE=https://vtiav.sm.ee/index.php/opendata/basseini_veeproovid_{year}.xml
 TERVISEAMET_BEACH_SAMPLES_URL_TEMPLATE=https://vtiav.sm.ee/index.php/opendata/supluskoha_veeproovid_{year}.xml
 TERVISEAMET_SAMPLE_YEARS_BACK=1
+TERVISEAMET_FETCH_TIMEOUT_MS=20000
+TERVISEAMET_MAX_FEED_BYTES=10485760
 CORS_ORIGIN=http://localhost:3000
+BODY_LIMIT_BYTES=1048576
+SYNC_API_TOKEN=change-me
+ALLOW_UNAUTHENTICATED_SYNC=false
+SYNC_RATE_LIMIT_MAX=20
+SYNC_RATE_LIMIT_WINDOW_MS=600000
 
 # Web
 API_BASE_URL=http://localhost:3001/api
