Harden API sync security and production container defaults

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -8,9 +8,11 @@ TERVISEAMET_BEACH_SAMPLES_URL_TEMPLATE=https://vtiav.sm.ee/index.php/opendata/su
 TERVISEAMET_SAMPLE_YEARS_BACK=1
 TERVISEAMET_FETCH_TIMEOUT_MS=20000
 TERVISEAMET_MAX_FEED_BYTES=10485760
+TERVISEAMET_ALLOWED_HOSTS=vtiav.sm.ee
 CORS_ORIGIN=http://localhost:3000
 BODY_LIMIT_BYTES=1048576
 SYNC_API_TOKEN=change-me
 ALLOW_UNAUTHENTICATED_SYNC=false
 SYNC_RATE_LIMIT_MAX=20
 SYNC_RATE_LIMIT_WINDOW_MS=600000
+SYNC_RATE_LIMIT_MAX_TRACKED_IPS=10000
