--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,12 +57,14 @@ services:
       TERVISEAMET_SAMPLE_YEARS_BACK: 1
       TERVISEAMET_FETCH_TIMEOUT_MS: 20000
       TERVISEAMET_MAX_FEED_BYTES: 10485760
+      TERVISEAMET_ALLOWED_HOSTS: vtiav.sm.ee
       CORS_ORIGIN: http://localhost:3000
       BODY_LIMIT_BYTES: 1048576
       SYNC_API_TOKEN: dev-sync-token
       ALLOW_UNAUTHENTICATED_SYNC: 'false'
       SYNC_RATE_LIMIT_MAX: 20
       SYNC_RATE_LIMIT_WINDOW_MS: 600000
+      SYNC_RATE_LIMIT_MAX_TRACKED_IPS: 10000
       PORT: 3001
     ports:
       - '3001:3001'
