--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -5,8 +5,8 @@
     "moduleResolution": "Node",
     "target": "ES2022",
     "lib": ["ES2022"],
-    "declaration": true,
-    "sourceMap": true,
+    "declaration": false,
+    "sourceMap": false,
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
