--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -8,7 +8,6 @@
     "dev:docker": "expo start --clear --host lan --port 8081",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web",
     "lint": "eslint \"**/*.{ts,tsx}\"",
     "typecheck": "tsc --noEmit",
     "test": "vitest run --passWithNoTests",
@@ -17,18 +16,12 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@expo/metro-runtime": "~5.0.5",
     "@veevalve/core": "workspace:*",
     "@veevalve/ui": "workspace:*",
     "expo": "~53.0.27",
-    "expo-location": "~18.1.6",
-    "expo-notifications": "~0.31.5",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.6",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-web": "^0.20.0"
+    "react-native": "0.79.6"
   },
   "devDependencies": {
     "@types/react": "~19.0.10",
