--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,19 +6,30 @@
   "main": "dist/index.cjs",
   "module": "dist/index.js",
   "types": "src/index.ts",
+  "sideEffects": false,
   "exports": {
     ".": {
       "types": "./src/index.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
+    },
+    "./client": {
+      "types": "./src/client.ts",
+      "import": "./dist/client.js",
+      "require": "./dist/client.cjs"
+    },
+    "./server": {
+      "types": "./src/server.ts",
+      "import": "./dist/server.js",
+      "require": "./dist/server.cjs"
     }
   },
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --format esm,cjs --dts",
-    "dev": "tsup src/index.ts --watch --dts",
+    "build": "tsup src/index.ts src/client.ts src/server.ts --format esm,cjs --dts",
+    "dev": "tsup src/index.ts src/client.ts src/server.ts --watch --dts",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
@@ -26,8 +37,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "fast-xml-parser": "^4.5.3",
-    "zod": "^3.25.76"
+    "fast-xml-parser": "^4.5.3"
   },
   "devDependencies": {
     "tsup": "^8.5.1",
