feat: support external scheduled sync for serverless deployments

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,7 @@ CORS_ORIGIN=http://localhost:3000
 BODY_LIMIT_BYTES=1048576
 SYNC_API_TOKEN=change-me
 ALLOW_UNAUTHENTICATED_SYNC=false
+ENABLE_INTERNAL_SYNC_CRON=true
 SYNC_RATE_LIMIT_MAX=20
 SYNC_RATE_LIMIT_WINDOW_MS=600000
 SYNC_RATE_LIMIT_MAX_TRACKED_IPS=10000
