--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ TERVISEAMET_MAX_FEED_BYTES=10485760
 TERVISEAMET_ALLOWED_HOSTS=vtiav.sm.ee
 CORS_ORIGIN=http://localhost:3000
 BODY_LIMIT_BYTES=1048576
+# Generate securely: pnpm --filter @veevalve/api sync:token -- --env
 SYNC_API_TOKEN=change-me
 ALLOW_UNAUTHENTICATED_SYNC=false
 ENABLE_INTERNAL_SYNC_CRON=true
