fix: stabilize vercel api build and upgrade prisma

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ NODE_ENV=development
 
 # API
 PORT=3001
+# Used by Prisma and docker compose api service
 DATABASE_URL=postgresql://veevalve:veevalve@localhost:5432/veevalve?schema=public
 TERVISEAMET_POOL_FACILITIES_URL=https://vtiav.sm.ee/index.php/opendata/ujulad.xml
 TERVISEAMET_POOL_LOCATIONS_URL=https://vtiav.sm.ee/index.php/opendata/basseinid.xml
