--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -4,13 +4,16 @@
   },
   "build": {
     "development": {
+      "node": "24.13.1",
       "developmentClient": true,
       "distribution": "internal"
     },
     "preview": {
+      "node": "24.13.1",
       "distribution": "internal"
     },
     "production": {
+      "node": "24.13.1",
       "autoIncrement": true
     }
   },
