--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "turbo run build",
     "lint": "turbo run lint",
     "typecheck": "turbo run typecheck",
+    "vercel:check:api": "pnpm --filter @veevalve/api vercel:check",
     "test": "turbo run test",
     "format": "turbo run format",
     "clean": "turbo run clean"
