--- a/.github/workflows/web-vercel.yml
+++ b/.github/workflows/web-vercel.yml
@@ -6,28 +6,55 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    if: ${{ secrets.VERCEL_TOKEN != '' && secrets.VERCEL_ORG_ID != '' && secrets.VERCEL_PROJECT_ID != '' }}
 
     steps:
+      - name: Preflight secrets
+        id: preflight
+        env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+        run: |
+          missing=0
+          for secret_name in VERCEL_TOKEN VERCEL_ORG_ID VERCEL_PROJECT_ID; do
+            if [ -z "${!secret_name:-}" ]; then
+              echo "Missing required secret: $secret_name"
+              missing=1
+            fi
+          done
+
+          if [ "$missing" -eq 1 ]; then
+            echo "skip=true" >> "$GITHUB_OUTPUT"
+            echo "Skipping web deploy because required Vercel secrets are missing."
+          else
+            echo "skip=false" >> "$GITHUB_OUTPUT"
+          fi
+
       - name: Checkout
+        if: steps.preflight.outputs.skip != 'true'
         uses: actions/checkout@v4
 
       - name: Setup pnpm
+        if: steps.preflight.outputs.skip != 'true'
         uses: pnpm/action-setup@v4
 
       - name: Setup Node
+        if: steps.preflight.outputs.skip != 'true'
         uses: actions/setup-node@v4
         with:
           node-version: 24
           cache: pnpm
 
       - name: Install dependencies
+        if: steps.preflight.outputs.skip != 'true'
         run: pnpm install --no-frozen-lockfile
 
       - name: Install Vercel CLI
+        if: steps.preflight.outputs.skip != 'true'
         run: pnpm dlx vercel --version
 
       - name: Pull Vercel config
+        if: steps.preflight.outputs.skip != 'true'
         run: pnpm dlx vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
         working-directory: apps/web
         env:
@@ -35,6 +62,7 @@ jobs:
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
       - name: Build web app
+        if: steps.preflight.outputs.skip != 'true'
         run: pnpm dlx vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
         working-directory: apps/web
         env:
@@ -42,6 +70,7 @@ jobs:
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
       - name: Deploy web app
+        if: steps.preflight.outputs.skip != 'true'
         run: pnpm dlx vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
         working-directory: apps/web
         env:
