--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,16 +18,16 @@
     "@fontsource/newsreader": "^5.2.10",
     "@veevalve/core": "workspace:*",
     "@veevalve/ui": "workspace:*",
-    "next": "^15.5.12",
+    "next": "^16.1.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4"
   },
   "devDependencies": {
-    "@types/node": "^22.19.11",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "^25.2.3",
     "@types/react": "^19.2.14",
-    "autoprefixer": "^10.4.24",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.19",
-    "vitest": "^3.2.4"
+    "tailwindcss": "^4.1.18",
+    "vitest": "^4.0.18"
   }
 }
