--- a/turbo.json
+++ b/turbo.json
@@ -5,6 +5,8 @@
       "dependsOn": ["^build"],
       "outputs": ["dist/**", ".next/**", "expo-env.d.ts"],
       "env": [
+        "API_BASE_URL",
+        "NEXT_PUBLIC_API_BASE_URL",
         "DATABASE_URL",
         "TERVISEAMET_POOL_FACILITIES_URL",
         "TERVISEAMET_POOL_LOCATIONS_URL",
