chore: commit remaining env and tooling updates

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ NODE_ENV=development
 # API
 PORT=3001
 # Used by Prisma and docker compose api service
-DATABASE_URL=postgresql://veevalve:veevalve@localhost:5432/veevalve?schema=public
+DATABASE_URL=postgresql://veevalve:veevalve@postgres:5432/veevalve?schema=public
 TERVISEAMET_POOL_FACILITIES_URL=https://vtiav.sm.ee/index.php/opendata/ujulad.xml
 TERVISEAMET_POOL_LOCATIONS_URL=https://vtiav.sm.ee/index.php/opendata/basseinid.xml
 TERVISEAMET_BEACH_LOCATIONS_URL=https://vtiav.sm.ee/index.php/opendata/supluskohad.xml
@@ -19,17 +19,17 @@ BODY_LIMIT_BYTES=1048576
 # Generate securely: pnpm --filter @veevalve/api sync:token -- --env
 SYNC_API_TOKEN=change-me
 ALLOW_UNAUTHENTICATED_SYNC=false
-ENABLE_INTERNAL_SYNC_CRON=true
+ENABLE_INTERNAL_SYNC_CRON=false
 SYNC_RATE_LIMIT_MAX=20
 SYNC_RATE_LIMIT_WINDOW_MS=600000
 SYNC_RATE_LIMIT_MAX_TRACKED_IPS=10000
 
 # Web
-API_BASE_URL=http://localhost:3001/api
-NEXT_PUBLIC_API_BASE_URL=http://localhost:3001/api
+API_BASE_URL=http://localhost:3001
+NEXT_PUBLIC_API_BASE_URL=http://localhost:3001
 
 # Mobile / Expo
-EXPO_PUBLIC_API_BASE_URL=http://localhost:3001/api
+EXPO_PUBLIC_API_BASE_URL=http://localhost:3001
 
 # OAuth placeholders
 GOOGLE_CLIENT_ID=
