feat(web,api): add secure web push notifications for favorites

--- a/turbo.json
+++ b/turbo.json
@@ -24,7 +24,15 @@
         "ENABLE_INTERNAL_SYNC_CRON",
         "SYNC_RATE_LIMIT_MAX",
         "SYNC_RATE_LIMIT_WINDOW_MS",
-        "SYNC_RATE_LIMIT_MAX_TRACKED_IPS"
+        "SYNC_RATE_LIMIT_MAX_TRACKED_IPS",
+        "WEB_PUSH_VAPID_PUBLIC_KEY",
+        "WEB_PUSH_VAPID_PRIVATE_KEY",
+        "WEB_PUSH_VAPID_SUBJECT",
+        "WEB_PUSH_ALLOWED_ENDPOINT_HOSTS",
+        "WEB_PUSH_RATE_LIMIT_MAX",
+        "WEB_PUSH_RATE_LIMIT_WINDOW_MS",
+        "WEB_PUSH_RATE_LIMIT_MAX_TRACKED_IPS",
+        "NEXT_PUBLIC_WEB_PUSH_VAPID_PUBLIC_KEY"
       ]
     },
     "@veevalve/api#build": {
