--- a/.env.example
+++ b/.env.example
@@ -23,10 +23,18 @@ ENABLE_INTERNAL_SYNC_CRON=false
 SYNC_RATE_LIMIT_MAX=20
 SYNC_RATE_LIMIT_WINDOW_MS=600000
 SYNC_RATE_LIMIT_MAX_TRACKED_IPS=10000
+WEB_PUSH_VAPID_PUBLIC_KEY=
+WEB_PUSH_VAPID_PRIVATE_KEY=
+WEB_PUSH_VAPID_SUBJECT=mailto:taavi@salo.ee
+WEB_PUSH_ALLOWED_ENDPOINT_HOSTS=fcm.googleapis.com,push.services.mozilla.com,updates.push.services.mozilla.com,web.push.apple.com,notify.windows.com
+WEB_PUSH_RATE_LIMIT_MAX=60
+WEB_PUSH_RATE_LIMIT_WINDOW_MS=600000
+WEB_PUSH_RATE_LIMIT_MAX_TRACKED_IPS=10000
 
 # Web
 API_BASE_URL=http://localhost:3001
 NEXT_PUBLIC_API_BASE_URL=http://localhost:3001
+NEXT_PUBLIC_WEB_PUSH_VAPID_PUBLIC_KEY=
 
 # Mobile / Expo
 EXPO_PUBLIC_API_BASE_URL=http://localhost:3001
