--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,2 +1,3 @@
-API_BASE_URL=http://localhost:3001/api
-NEXT_PUBLIC_API_BASE_URL=http://localhost:3001/api
+API_BASE_URL=http://localhost:3001
+NEXT_PUBLIC_API_BASE_URL=http://localhost:3001
+NEXT_PUBLIC_WEB_PUSH_VAPID_PUBLIC_KEY=
