feat(push): improve web push setup, reliability, and notification UX

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -18,7 +18,7 @@ SYNC_RATE_LIMIT_WINDOW_MS=600000
 SYNC_RATE_LIMIT_MAX_TRACKED_IPS=10000
 WEB_PUSH_VAPID_PUBLIC_KEY=
 WEB_PUSH_VAPID_PRIVATE_KEY=
-WEB_PUSH_VAPID_SUBJECT=mailto:taavi@salo.ee
+WEB_PUSH_VAPID_SUBJECT=mailto:you@example.com
 WEB_PUSH_ALLOWED_ENDPOINT_HOSTS=fcm.googleapis.com,push.services.mozilla.com,updates.push.services.mozilla.com,web.push.apple.com,notify.windows.com
 WEB_PUSH_RATE_LIMIT_MAX=60
 WEB_PUSH_RATE_LIMIT_WINDOW_MS=600000
