--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,7 +22,8 @@
     "prisma:studio": "XDG_CACHE_HOME=../../.cache prisma studio",
     "prisma:seed": "tsx prisma/seed.ts",
     "sync:token": "node ./scripts/generate-sync-token.mjs",
-    "push:vapid": "node ./scripts/generate-vapid-keys.mjs"
+    "push:vapid": "node ./scripts/generate-vapid-keys.mjs",
+    "push:setup": "node ./scripts/setup-web-push.mjs"
   },
   "dependencies": {
     "@nestjs/common": "^11.1.13",
