--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,7 @@ WEB_PUSH_RATE_LIMIT_MAX_TRACKED_IPS=10000
 # Web
 API_BASE_URL=http://localhost:3001
 NEXT_PUBLIC_API_BASE_URL=http://localhost:3001
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
 NEXT_PUBLIC_WEB_PUSH_VAPID_PUBLIC_KEY=
 
 # Mobile / Expo
