--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,3 +1,4 @@
 API_BASE_URL=http://localhost:3001
 NEXT_PUBLIC_API_BASE_URL=http://localhost:3001
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
 NEXT_PUBLIC_WEB_PUSH_VAPID_PUBLIC_KEY=
