--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,4 +1,5 @@
 API_BASE_URL=http://localhost:3001
 NEXT_PUBLIC_API_BASE_URL=http://localhost:3001
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
+GOOGLE_SITE_VERIFICATION=
 NEXT_PUBLIC_WEB_PUSH_VAPID_PUBLIC_KEY=
