feat(mobile): align UI with web and stabilize expo docker dev

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -5,7 +5,9 @@
     "version": "0.1.0",
     "orientation": "portrait",
     "scheme": "veevalve",
+    "newArchEnabled": true,
     "userInterfaceStyle": "light",
+    "plugins": ["expo-dev-client"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "ee.veevalve.app"
