--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -8,8 +8,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 ENV PNPM_HOME=/pnpm
 ENV PATH=$PNPM_HOME:$PATH
 ENV PNPM_STORE_PATH=/pnpm/store
+ENV COREPACK_ENABLE_DOWNLOAD_PROMPT=0
 
-RUN corepack enable && corepack prepare pnpm@10.29.3 --activate \
+RUN corepack enable && corepack prepare pnpm@10.30.0 --activate \
   && pnpm config set store-dir /pnpm/store
 
 WORKDIR /workspace
