--- a/apps/mobile/.env.example
+++ b/apps/mobile/.env.example
@@ -1,1 +1,3 @@
-EXPO_PUBLIC_API_BASE_URL=http://localhost:3001/api
+EXPO_PUBLIC_API_BASE_URL=http://localhost:3001
+# Optional fallback for physical devices if host auto-detection fails.
+# EXPO_PUBLIC_DEV_SERVER_HOST=192.168.1.100
