--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,11 +26,13 @@
     "push:setup": "node ./scripts/setup-web-push.mjs"
   },
   "dependencies": {
+    "@fastify/static": "^9.0.0",
     "@nestjs/common": "^11.1.13",
     "@nestjs/config": "^4.0.3",
     "@nestjs/core": "^11.1.13",
     "@nestjs/platform-fastify": "^11.1.13",
     "@nestjs/schedule": "^6.1.1",
+    "@nestjs/swagger": "^11.2.6",
     "@prisma/adapter-pg": "^7.4.0",
     "@prisma/client": "^7.4.0",
     "@veevalve/core": "workspace:*",
@@ -43,9 +45,9 @@
     "web-push": "^3.6.7"
   },
   "devDependencies": {
-    "@types/web-push": "^3.6.4",
     "@nestjs/cli": "^11.0.16",
     "@types/node": "^25.2.3",
+    "@types/web-push": "^3.6.4",
     "prisma": "^7.4.0",
     "tsx": "^4.21.0",
     "vitest": "^4.0.18"
