chore(api): tune Swagger UI defaults and pnpm build-script allowlist

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
+      "@scarf/scarf",
       "@nestjs/core",
       "@prisma/engines",
       "esbuild",
